--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <a href="#ponyo" >Ponyo</a>
             <a href="#castelo">Castelo Animado</a>
-            <a href="#">Projeto</a>
+            <a href="https://github.com/queldiniz/Ghibli-CSS">Projeto</a>
         </nav>
     </header>
     
